# Eclipse24

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
src/eclipse24/configs/: queues.yaml  rules.yaml
src/eclipse24/configs/sql/: 001_init.sql  002_state.sql  003_logging.sql
src/eclipse24/libs/: queue_config.py
src/eclipse24/libs/core/: config.py  logging.py
src/eclipse24/libs/db/: postgres.py
src/eclipse24/libs/jira/: utils.py
src/eclipse24/libs/kafka/: utils.py
src/eclipse24/libs/messaging/: kafka_client.py  messaging.py  rmq.py
src/eclipse24/libs/slack/: utils.py
src/eclipse24/libs/stores/: db.py
src/eclipse24/scripts/: migrate_db.py  test_narcissus.py  test_rmq.py
src/eclipse24/services/api/: block.py  common.py  extend_2w.py  extend_3d.py  main.py
src/eclipse24/services/approver/: main.py
src/eclipse24/services/audit/: main.py
src/eclipse24/services/blocker/: main.py
src/eclipse24/services/expiry_watcher/: main.py
src/eclipse24/services/internal_cost/: main.py
src/eclipse24/services/poller/: main.py
src/eclipse24/services/reminder/: main.py
src/eclipse24/services/validator/: main.py
